tests/baselines/reference/memberAccessMustUseModuleInstances.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== memberAccessMustUseModuleInstances_1.ts (0 errors) ====
    ///<reference path='memberAccessMustUseModuleInstances_0.ts'/>
    import WinJS = require('memberAccessMustUseModuleInstances_0');
    
    WinJS.Promise.timeout(10);
    
==== memberAccessMustUseModuleInstances_0.ts (0 errors) ====
    export class Promise {
        static timeout(delay: number): Promise {
            return null;
        }
    }
    